The guard code cant be populated on first run or the real code won't be mailed.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 STEAM_USER=username
 STEAM_PASSWORD=password
-STEAM_GUARD_CODE=guard code - run docker-compose build to have this mailed to you and rerun after setting the value here
+# guard code - run `docker-compose up -d` to have this mailed to you and rerun after setting the value here
+STEAM_GUARD_CODE=
 MAXPLAYERS=32
 START_MAP=de_dust2
 SERVER_NAME=Counter-Strike 1.6 Server
